fix(renderer-app): room detailed page overflow (#1398)

--- a/desktop/renderer-app/src/pages/PeriodicRoomDetailPage/index.less
+++ b/desktop/renderer-app/src/pages/PeriodicRoomDetailPage/index.less
@@ -1,18 +1,16 @@
+@import "flat-components/theme/fancy-scrollbar.less";
+
 .periodic-room-detail-page-container {
+    display: flex;
+    flex-direction: column;
     height: 100%;
-    overflow: auto;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
     border-radius: 6px;
     background-color: #fff;
 }
 
 .periodic-room-detail-page-header-container {
-    position: fixed;
-    width: 86%;
-    z-index: 1;
-    margin: 0 24px;
-    padding: 16px 0;
-    background-color: #fff;
+    padding: 16px 24px;
 }
 
 .periodic-room-detail-page-header-title {
@@ -24,9 +22,9 @@
 }
 
 .periodic-room-detail-page-panel-container {
-    width: 560px;
-    margin: 0 auto;
-    margin-top: 65px;
+    .fancy-scrollbar-mixin();
+    flex: 1;
+    padding: 0 148px;
 }
 
 .flat-color-scheme-dark {
